# trivium-c-

./: CMakeLists.txt  readme.md
tests/: CMakeLists.txt
tests/trivium/: trivium_test.cpp
trivium/: CMakeLists.txt  main.cpp
trivium/core/: trivium.cpp  trivium.h
trivium/gui/: bit.cpp  bit.h  mainwindow.cpp  mainwindow.h  triviumwidget.cpp  triviumwidget.h
trivium/gui/ui/: bit.ui  mainwindow.ui  trivium.ui
trivium/gui/ui/img/: resource.qrc
